--- a/src/app/components/baseComponents/box/box.component.html
+++ b/src/app/components/baseComponents/box/box.component.html
@@ -1,9 +1,9 @@
-<div class="box">
-  <div class="boat" *ngIf="state.align === 'center' && state.busy" [ngClass]="{'destroyed': state.destroyed}"></div>
-  <div *ngIf="state.align === 'right'" class="boat-right"></div>
-  <div *ngIf="state.align === 'left'" class="boat-left"></div>
-  <div *ngIf="state.align === 'top'" class="boat-top"></div>
-  <div *ngIf="state.align === 'bottom'" class="boat-bottom"></div>
-  <div *ngIf="state.align === 'line-horizontal'" class="boat-line-horizontal"></div>
-  <div *ngIf="state.align === 'line-vertical'" class="boat-line-vertical"></div>
+<div class="box" [ngClass]="{'no-border': !border}">
+  <div class="boat" *ngIf="align === 'center' && state.busy" [ngClass]="{'destroyed': state.destroyed}"></div>
+  <div *ngIf="align === 'right'" class="boat-right" [ngClass]="{'boat-border-right': !border}"></div>
+  <div *ngIf="align === 'left'" class="boat-left" [ngClass]="{'boat-border-left': !border}"></div>
+  <div *ngIf="align === 'top'" class="boat-top"></div>
+  <div *ngIf="align === 'bottom'" class="boat-bottom"></div>
+  <div *ngIf="align === 'line-horizontal'" class="boat-line-horizontal" [ngClass]="{'boat-border-right boat-border-left': !border}"></div>
+  <div *ngIf="align === 'line-vertical'" class="boat-line-vertical" [ngClass]="{'boat-border-right boat-border-left': !border}"></div>
 </div>
