--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,3 +1,3 @@
 <div class="grid">
-  <app-box *ngFor="let state of boxes; index as i" [state]="state" (click)="clicked(i)"></app-box>
+  <app-box *ngFor="let state of boxes; index as i" [state]="state" (click)="clicked(i)" [align]="alignes[i]"></app-box>
 </div>
