--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -7,4 +7,34 @@
 
 .buttons-container {
     width: 50vw;
+
+    p {
+        color: white;
+        font-size: 20px;
+        font-weight: 500;
+    }
+
+    .join-input {
+        width: 16vw;
+        border: solid 3px white;
+        height: 70px;
+        border-radius: 30px;
+        margin-right: 15px;
+        background-color: transparent;
+        font-size: 20px;
+        padding: 0 25px 0 25px;
+        color: white;
+
+        &::placeholder {
+            font-weight: 400;
+            color: #FFFFFF80;
+        }
+
+    }
+
+    h4 {
+        color: tomato;
+        font-size: 25px;
+    }
+
 }
