--- a/src/app/pages/play/play.component.html
+++ b/src/app/pages/play/play.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+    <div class="circle" [ngClass]="{'active': turn !== playerID}"></div>
     <app-grid [board]="gameBoard" [type]="'my'" [disableClick]="true"></app-grid>
     <app-grid [board]="oppositeBoard" [type]="'opposite'" (onOppositClick)="attacks($event)"></app-grid>
 </div>
