--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -59,6 +59,6 @@
         </div>
     </div>
     <div class="grid-container">
-        <app-grid [board]="board" [type]="'my'" (onBoxAdded)="incrementBoxNumber($event)"></app-grid>
+        <app-grid [board]="board" [type]="'my'" (onBoxAdded)="incrementBoxNumber($event)" [defaultAlign]="'center'"></app-grid>
     </div>
 </div>
