--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,41 +9,41 @@
         </div>
         <div>
             <!-- PEZZI DA 1 -->
-            <div class="row" draggable="true">
+            <div class="row">
                 <p class="pieces-number">
                     {{ pieces[1] }}
                 </p>
-                <div class="boat" draggable="true" (dragstart)="dragStarted($event)">
+                <div class="boat" draggable="true" (dragstart)="dragStarted($event, '1')">
                     <app-box [state]="defaultBoxState" [align]="'center'" [border]="false"></app-box>
                 </div>
             </div>
             <!-- PEZZI DA 2 -->
-            <div class="row" draggable="true">
+            <div class="row">
                 <p class="pieces-number">
                     {{ pieces[2] }}
                 </p>
-                <div class="boat" draggable="true">
+                <div class="boat" draggable="true" (dragstart)="dragStarted($event, '2')">
                     <app-box [state]="defaultBoxState" [align]="'right'" [border]="false"></app-box>
                     <app-box [state]="defaultBoxState" [align]="'left'" [border]="false"></app-box>
                 </div>
             </div>
             <!-- PEZZI DA 3 -->
-            <div class="row" draggable="true">
+            <div class="row">
                 <p class="pieces-number">
                     {{ pieces[3] }}
                 </p>
-                <div class="boat" draggable="true">
+                <div class="boat" draggable="true" (dragstart)="dragStarted($event, '3')">
                     <app-box [state]="defaultBoxState" [align]="'right'" [border]="false"></app-box>
                     <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
                     <app-box [state]="defaultBoxState" [align]="'left'" [border]="false"></app-box>
                 </div>
             </div>
             <!-- PEZZI DA 4 -->
-            <div class="row" draggable="true">
+            <div class="row">
                 <p class="pieces-number">
                     {{ pieces[4] }}
                 </p>
-                <div class="boat" draggable="true">
+                <div class="boat" draggable="true"  (dragstart)="dragStarted($event, '4')">
                     <app-box [state]="defaultBoxState" [align]="'right'" [border]="false"></app-box>
                     <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
                     <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
@@ -51,11 +51,11 @@
                 </div>
             </div>
             <!-- PEZZI DA 5 -->
-            <div class="row" draggable="true">
+            <div class="row">
                 <p class="pieces-number">
                     {{ pieces[5] }}
                 </p>
-                <div class="boat" draggable="true">
+                <div class="boat" draggable="true" (dragstart)="dragStarted($event, '5')">
                     <app-box [state]="defaultBoxState" [align]="'right'" [border]="false"></app-box>
                     <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
                     <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
