--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -41,6 +41,11 @@
             .boat {
                 display: flex;
             }
+            .boat[draggable="false"] {
+                & > app-box {
+                    cursor: url('../../../assets/icons/not-allowed.svg'), auto;
+                }
+            }
 
             .pieces-number {
                 width: 40px;
