--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,8 +4,6 @@
         <div class="game-code">
             <p>condividi questo codice con il tuo avversario</p>
             <h4>game: {{ gameID }}</h4>
-            <br>
-            box: {{ boxNumber }}
         </div>
         <div>
             <!-- PEZZI DA 1 -->
@@ -13,8 +11,8 @@
                 <p class="pieces-number">
                     {{ pieces[1] }}
                 </p>
-                <div class="boat" draggable="true" (dragstart)="dragStarted($event, '1')">
-                    <app-box [state]="defaultBoxState" [align]="'center'" [border]="false"></app-box>
+                <div class="boat" [attr.draggable]="pieces[1] > 0" (dragstart)="dragStarted($event, '1')">
+                    <app-box [state]="defaultBoxState | boxState:'center'" [border]="false"></app-box>
                 </div>
             </div>
             <!-- PEZZI DA 2 -->
@@ -22,9 +20,9 @@
                 <p class="pieces-number">
                     {{ pieces[2] }}
                 </p>
-                <div class="boat" draggable="true" (dragstart)="dragStarted($event, '2')">
-                    <app-box [state]="defaultBoxState" [align]="'right'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'left'" [border]="false"></app-box>
+                <div class="boat" [attr.draggable]="pieces[2] > 0" (dragstart)="dragStarted($event, '2')">
+                    <app-box [state]="defaultBoxState | boxState:'right'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'left'" [border]="false"></app-box>
                 </div>
             </div>
             <!-- PEZZI DA 3 -->
@@ -32,10 +30,10 @@
                 <p class="pieces-number">
                     {{ pieces[3] }}
                 </p>
-                <div class="boat" draggable="true" (dragstart)="dragStarted($event, '3')">
-                    <app-box [state]="defaultBoxState" [align]="'right'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'left'" [border]="false"></app-box>
+                <div class="boat" [attr.draggable]="pieces[3] > 0" (dragstart)="dragStarted($event, '3')">
+                    <app-box [state]="defaultBoxState | boxState:'right'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'line-horizontal'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'left'" [border]="false"></app-box>
                 </div>
             </div>
             <!-- PEZZI DA 4 -->
@@ -43,11 +41,11 @@
                 <p class="pieces-number">
                     {{ pieces[4] }}
                 </p>
-                <div class="boat" draggable="true"  (dragstart)="dragStarted($event, '4')">
-                    <app-box [state]="defaultBoxState" [align]="'right'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'left'" [border]="false"></app-box>
+                <div class="boat" [attr.draggable]="pieces[4] > 0"  (dragstart)="dragStarted($event, '4')">
+                    <app-box [state]="defaultBoxState | boxState:'right'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'line-horizontal'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'line-horizontal'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'left'" [border]="false"></app-box>
                 </div>
             </div>
             <!-- PEZZI DA 5 -->
@@ -55,12 +53,12 @@
                 <p class="pieces-number">
                     {{ pieces[5] }}
                 </p>
-                <div class="boat" draggable="true" (dragstart)="dragStarted($event, '5')">
-                    <app-box [state]="defaultBoxState" [align]="'right'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'line-horizontal'" [border]="false"></app-box>
-                    <app-box [state]="defaultBoxState" [align]="'left'" [border]="false"></app-box>
+                <div class="boat" [attr.draggable]="pieces[5] > 0" (dragstart)="dragStarted($event, '5')">
+                    <app-box [state]="defaultBoxState | boxState:'right'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'line-horizontal'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'line-horizontal'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'line-horizontal'" [border]="false"></app-box>
+                    <app-box [state]="defaultBoxState | boxState:'left'" [border]="false"></app-box>
                 </div>
             </div>
         </div>
@@ -70,6 +68,6 @@
         </div>
     </div>
     <div class="grid-container">
-        <app-grid [board]="board" [type]="'my'" (onBoxAdded)="incrementBoxNumber($event)" [defaultAlign]="'center'"></app-grid>
+        <app-grid [board]="board" [type]="'my'" (onBoatAdded)="decreasePieces($event)" (onBoatDeleted)="increasePieces($event)"></app-grid>
     </div>
 </div>
