--- a/src/app/components/baseComponents/box/box.component.html
+++ b/src/app/components/baseComponents/box/box.component.html
@@ -2,10 +2,10 @@
   <div *ngIf="!state.busy && state.bomb" class="cross">X</div>
   <div *ngIf="state.align === null && state.busy && state.bomb" class="circle">O</div>
   <div *ngIf="state.align === 'center' && state.busy" class="boat" [ngClass]="{'destroyed': state.bomb && state.busy}"></div>
-  <div *ngIf="state.align === 'right'" class="boat-right" [ngClass]="{'boat-border-right': !border}"></div>
-  <div *ngIf="state.align === 'left'" class="boat-left" [ngClass]="{'boat-border-left': !border}"></div>
-  <div *ngIf="state.align === 'top'" class="boat-top"></div>
-  <div *ngIf="state.align === 'bottom'" class="boat-bottom"></div>
-  <div *ngIf="state.align === 'line-horizontal'" class="boat-line-horizontal" [ngClass]="{'boat-border-right boat-border-left': !border}"></div>
-  <div *ngIf="state.align === 'line-vertical'" class="boat-line-vertical" [ngClass]="{'boat-border-right boat-border-left': !border}"></div>
+  <div *ngIf="state.align === 'right'" class="boat-right" [ngClass]="{'boat-border-right': !border, 'distroyed': state.bomb}"></div>
+  <div *ngIf="state.align === 'left'" class="boat-left" [ngClass]="{'boat-border-left': !border, 'distroyed': state.bomb}"></div>
+  <div *ngIf="state.align === 'top'" class="boat-top" [ngClass]="{'destroyed': state.bomb}"></div>
+  <div *ngIf="state.align === 'bottom'" class="boat-bottom" [ngClass]="{'destroyed': state.bomb}"></div>
+  <div *ngIf="state.align === 'line-horizontal'" class="boat-line-horizontal" [ngClass]="{'boat-border-right boat-border-left': !border, 'destroyed': state.bomb}"></div>
+  <div *ngIf="state.align === 'line-vertical' && !state.bomb" class="boat-line-vertical" [ngClass]="{'boat-border-right boat-border-left': !border, 'destroyed': state.bomb}"></div>
 </div>
